k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tesflix-deployment
  labels:
    app: tesflix
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tesflix
  template:
    metadata:
      labels:
        app: tesflix
    spec:
      containers:
      - name: tesflix
        image: naveennallamsetti/tesflix-hub:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 2Gi
