k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tesflix-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/api/metrics"
    prometheus.io/port: "3000"

spec:
  selector:
    app: tesflix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
